<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment" >

    <RadioGroup
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/client"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editRoomName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="room name"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonConnectSession"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/connect"
            android:background="@color/design_default_color_primary"
            style="@style/CustomBorderlessButtonWithColorPrimary"/>

        <Button
            android:id="@+id/buttonDisconnectSession"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/disconnect"
            android:background="@color/design_default_color_primary"
            style="@style/CustomBorderlessButtonWithColorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSettingCompleted"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_screen"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>